--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,9 @@
-colorlog==6.8.2
-executorch==0.6.0
-Flask==3.1.1
-matplotlib==3.10.3
-numpy==2.3.1
-paho_mqtt==2.1.0
-Pillow==11.3.0
-Requests==2.32.4
-scikit_learn==1.7.1
-scipy==1.16.0
-seaborn==0.13.2
-Shapely==2.1.1
-torch==2.7.0
-torch_geometric==2.6.1
-tqdm==4.66.4
-filelock==3.13.1
+torch>=1.9.0
+torch-geometric>=2.0.0
+numpy>=1.21.0
+matplotlib>=3.3.0
+tqdm>=4.60.0
+wandb>=0.15.0
+scipy>=1.7.0
+scikit-learn>=1.0.0
+seaborn>=0.11.0
